--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "moment": "^2.29.4",
     "mongoose": "^7.5.3",
     "nodemon": "^3.0.1"
   }
