--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
     "mongoose": "^7.5.3",
+    "node-cron": "^3.0.2",
     "nodemon": "^3.0.1"
   }
 }
