--- a/client/Virtual-Farm-Market/package.json
+++ b/client/Virtual-Farm-Market/package.json
@@ -20,7 +20,9 @@
     "bootstrap": "^5.3.2",
     "formik": "^2.4.5",
     "nanoid": "^5.0.1",
+    "primereact": "^10.0.2",
     "react": "^18.2.0",
+    "react-avatar-edit": "^1.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
