--- a/client/Virtual-Farm-Market/package.json
+++ b/client/Virtual-Farm-Market/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "formik": "^2.4.5",
+    "gapi-script": "^1.2.0",
     "nanoid": "^5.0.1",
     "primereact": "^10.0.2",
     "react": "^18.2.0",
@@ -28,6 +29,7 @@
     "react-hook-form": "^7.47.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
+    "react-social-login-buttons": "^3.9.1",
     "react-toastify": "^9.1.3",
     "recharts": "^2.8.0",
     "redux": "^4.2.1",
