--- a/client/Virtual-Farm-Market/package.json
+++ b/client/Virtual-Farm-Market/package.json
@@ -7,7 +7,10 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -37,7 +40,17 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.3",
     "redux-thunk": "^2.4.2",
-    "yup": "^1.3.2"
+    "yup": "^1.3.2",
+    "@emotion/cache": "11.10.8",
+    "chart.js": "4.3.0",
+    "chroma-js": "2.4.2",
+    "prop-types": "15.8.1",
+    "react-chartjs-2": "5.2.0",
+    "react-github-btn": "1.4.0",
+    "react-scripts": "5.0.1",
+    "react-table": "7.8.0",
+    "stylis": "4.1.4",
+    "stylis-plugin-rtl": "2.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
