--- a/client/Virtual-Farm-Market/package.json
+++ b/client/Virtual-Farm-Market/package.json
@@ -13,26 +13,37 @@
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start"
   },
   "dependencies": {
+    "@emotion/cache": "11.10.8",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.12",
     "@mui/material": "^5.14.11",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.2",
+    "@mui/x-data-grid": "^6.16.3",
     "@reduxjs/toolkit": "^1.9.6",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "chart.js": "4.3.0",
+    "chroma-js": "2.4.2",
     "formik": "^2.4.5",
     "gapi-script": "^1.2.0",
+    "moment": "^2.29.4",
     "nanoid": "^5.0.1",
     "primereact": "^10.0.2",
+    "prop-types": "15.8.1",
     "react": "^18.2.0",
     "react-avatar-edit": "^1.2.0",
     "react-bootstrap": "^2.9.0",
+    "react-chartjs-2": "5.2.0",
     "react-dom": "^18.2.0",
+    "react-github-btn": "1.4.0",
     "react-hook-form": "^7.47.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
+    "react-scripts": "5.0.1",
     "react-social-login-buttons": "^3.9.1",
+    "react-table": "7.8.0",
     "react-toastify": "^9.1.3",
     "recharts": "^2.8.0",
     "redux": "^4.2.1",
@@ -40,17 +51,10 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.3",
     "redux-thunk": "^2.4.2",
-    "yup": "^1.3.2",
-    "@emotion/cache": "11.10.8",
-    "chart.js": "4.3.0",
-    "chroma-js": "2.4.2",
-    "prop-types": "15.8.1",
-    "react-chartjs-2": "5.2.0",
-    "react-github-btn": "1.4.0",
-    "react-scripts": "5.0.1",
-    "react-table": "7.8.0",
+    "styled-components": "^6.1.0",
     "stylis": "4.1.4",
-    "stylis-plugin-rtl": "2.1.1"
+    "stylis-plugin-rtl": "2.1.1",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
