--- a/client/Virtual-Farm-Market/package.json
+++ b/client/Virtual-Farm-Market/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.12",
+    "@mui/joy": "^5.0.0-beta.12",
     "@mui/material": "^5.14.11",
     "@mui/styled-engine-sc": "^6.0.0-alpha.2",
     "@mui/x-data-grid": "^6.16.3",
