--- a/client/Virtual-Farm-Market/package.json
+++ b/client/Virtual-Farm-Market/package.json
@@ -3,7 +3,6 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -18,9 +17,10 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
+    "@mui/base": "^5.0.0-beta.23",
     "@mui/icons-material": "^5.14.12",
     "@mui/joy": "^5.0.0-beta.12",
-    "@mui/material": "^5.14.11",
+    "@mui/material": "^5.14.17",
     "@mui/styled-engine-sc": "^6.0.0-alpha.2",
     "@mui/x-data-grid": "^6.16.3",
     "@reduxjs/toolkit": "^1.9.6",
