--- a/client/Virtual-Farm-Market/package.json
+++ b/client/Virtual-Farm-Market/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^18.2.0",
     "react-github-btn": "1.4.0",
     "react-hook-form": "^7.47.0",
+    "react-image-magnify": "^2.7.4",
     "react-push-notification": "^1.5.3",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
