--- a/client/Virtual-Farm-Market/package.json
+++ b/client/Virtual-Farm-Market/package.json
@@ -24,6 +24,8 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.2",
     "@mui/x-data-grid": "^6.16.3",
     "@reduxjs/toolkit": "^1.9.6",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "chart.js": "4.3.0",
@@ -43,7 +45,6 @@
     "react-github-btn": "1.4.0",
     "react-hook-form": "^7.47.0",
     "react-image-magnify": "^2.7.4",
-    "react-push-notification": "^1.5.3",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
